...
~ You should have received a copy of the GNU General Public License along with
~ this program.  If not, see <http://www.gnu.org/licenses/>.
--><resources xmlns:tools="http://schemas.android.com/tools">
    <string name="operation_already_running">An operation is already running.</string>
    <string name="check_db_title">Check database?</string>
    <string name="check_db_warning">This may take a long time</string>
    <string name="contextmenu_deckpicker_delete_deck" maxLength="28">Delete deck</string>
    <string name="delete_deck_title">Delete deck?</string>
    <plurals name="delete_deck_message">
        <item quantity="one">Delete all cards in %1$s? It contains %2$d card</item>
        <item quantity="other">Delete all cards in %1$s? It contains %2$d cards</item>
    </plurals>
    <string name="delete_cram_deck_message">Delete filtered deck %s and send all cards back to their original decks?</string>
...
    <string name="dialog_yes">Yes</string>
    <string name="dialog_keep">Keep</string>
    <string name="dialog_remove">Remove</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_processing">Processing…</string>
    <string name="dialog_positive_create" comment="Create a new collection, probably erasing the previous one, may be necessary in case of error.">Create</string>
    <string name="dialog_positive_delete" maxLength="28">Delete</string>
    <!-- Currently unsued, should be useful in the future -->
    <string name="dialog_positive_disable" tools:ignore="UnusedResources">Disable</string>
    <string name="dialog_positive_overwrite">Overwrite</string>
    <string name="dialog_positive_repair">Repair</string>
    <string name="dialog_positive_replace">Replace</string>

...
