...
private suspend fun getUndoResultMessage(): String {
    val changes =
        undoableOp {
            if (!undoAvailable()) {
                OpChangesAfterUndo.getDefaultInstance()
            } else {
                undo()
            }
        }
    return if (changes.operation.isEmpty()) {
        TR.actionsNothingToUndo()
    } else {
        TR.undoActionUndone(changes.operation)
...
